add error handler and header recognition

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 github.api.base-url=https://api.github.com
+acceptedHeaderValue=application/json
+exception.message.not-acceptable=Header value not-acceptable
+exception.message.not-found=Did not find user with login:
