--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 github.api.base-url=https://api.github.com
+github.accept.value=application/vnd.github+json
 acceptedHeaderValue=application/json
 exception.message.not-acceptable=Header value not-acceptable
 exception.message.not-found=Did not find user with login:
