add webflux, change tests (adjust for webflux)

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -5,3 +5,5 @@ exception.message.not-acceptable=Header value not-acceptable
 exception.message.not-found=Did not find user with login:
 
 spring.threads.virtual.enabled=true
+
+spring.main.allow-bean-definition-overriding=true
